--- a/bcc.info.yml
+++ b/bcc.info.yml
@@ -1,5 +1,7 @@
-name: Blind carbon copy
+name: 'Blind Carbon Copy'
 type: module
-description: Adds a BCC address to all e-mails sent by the website.
+description: 'Adds a BCC address to all e-mails sent by the website.'
 package: Mail
 core: 8.x
+core_version_requirement: ^8 || ^9
+configure : bcc.settings
